subject seeder update
